== Changelog ==

= 1.2.4 - 08 May 2017 =
* Read mapbox token api from .env
* Fix spelling in about and readme.

= 1.2.3 - 06 May 2017 =
* Allow access to backend in maintenance.
* Fix typo in maintenance page.

= 1.2.2 - 04 May 2017 =
* Add youtube link and bio link in admin.

= 1.2.1 - 04 May 2017 =
* Add a maintenance page.
* Fix minor focus and hover visual issue.

= 1.2.0 - 02 May 2017 =
* Refactor keyboard navigation.
* Search artists.
* Fix responsive issue.

= 1.1.0 - 18 April 2017 =
* Show artist name on marker hover.
* Change artist.bio.wikipediaUrl to artist.bio.url.
* Add artist.bio.url input for artist submit.
* Add og attribute.

= 1.0.1 - 28 March 2017 =
* Fix minor bug & typo (error handling, etc).

= 1.0.0 - 27 March 2017 =
* Initial release.